--- a/education.html
+++ b/education.html
@@ -26,11 +26,11 @@
             <p>University of California, San Diego</p>
             <p>B.S. in Mathematics - Computer Science</p>
             <p>La Jolla, California</p>
-            <p>Expected Graduation, May 2027</p>
-            <p>Concentrations: Front End Development</p>
-            <p>GPA: 4.00/4.00</p>
-            <p>Related Coursework: Introduction to Programming 1, Introduction to Programming 2</p>
-            <p>Expected Related Coursework: Basic Data Structures & Object-Oriented Design, Software Tools & Techniques Lab</p>
+            <p>Expected Graduation, June 2027</p>
+            <p>Concentrations: Software Engineer/Machine Learning Engineer</p>
+            <p>GPA: 3.7/4.0</p>
+            <p>Related Coursework: Basic Data Structures & Object-Oriented Design, System Programs and Software Tools</p>
+            <p>Expected Related Coursework: Theory of Computation, Advanced Data Structures, Software Engineering</p>
         </section>
     </div>
 </body>
