--- a/experience.html
+++ b/experience.html
@@ -23,26 +23,14 @@
     <div class="content">
         <section id="experience">
             <h2>EXPERIENCE</h2>
-            <h3>Teazzi Tea Shop</h3>
-            <p>Barista & Cashier</p>
-            <p>Santa Ana, California</p>
-            <p>Oct 2022 - July 2023</p>
+            <h3>Early Research Scholar's Program</h3>
+            <p>Student Researcher</p>
+            <p>La Jolla, California</p>
+            <p>Sep 2024 - June 2025</p>
             <ul>
-                <li>Developed effective multitasking skills to handle multiple orders simultaneously during peak hours.</li>
-                <li>Provided exceptional customer service by greeting and assisting customers in a friendly and professional manner.</li>
-                <li>Worked collaboratively with team members to ensure a cohesive and positive work environment.</li>
+                <li>Developed effective multitasking skills to handle multiple tasks simultaneously.</li>
+                <li>Worked collaboratively with team members to ensure a cohesive and positive project environment.</li>
                 <li>Adapted to unexpected challenges with a proactive approach.</li>
-            </ul>
-
-            <h3>Stradling Law</h3>
-            <p>Summer Intern</p>
-            <p>Newport Beach, California</p>
-            <p>June 2022 - Aug 2022</p>
-            <ul>
-                <li>Prepared and organized legal documents and exhibits for use in court.</li>
-                <li>Collaborated with attorneys and legal staff to ensure seamless workflow and effective case management.</li>
-                <li>Handled sensitive information with the utmost discretion.</li>
-                <li>Seized opportunities to learn from experienced attorneys and seek guidance on career development.</li>
             </ul>
         </section>
     </div>
