--- a/skills.html
+++ b/skills.html
@@ -24,7 +24,7 @@
         <section id="skills">
             <h2>SKILLS</h2>
             <h3>Programming</h3>
-            <p>Java, Python, JavaScript, MATLAB</p>
+            <p>Java, Python, JavaScript, C, MATLAB</p>
             
             <h3>Language</h3>
             <p>English (native), Vietnamese (intermediate)</p>
