--- a/experience.html
+++ b/experience.html
@@ -23,14 +23,36 @@
     <div class="content">
         <section id="experience">
             <h2>EXPERIENCE</h2>
-            <h3>Early Research Scholar's Program</h3>
-            <p>Student Researcher</p>
-            <p>La Jolla, California</p>
-            <p>Sep 2024 - June 2025</p>
+
+            <h3>Retail Associate</h3>
+            <p>Location: [Add Location]</p>
+            <p>Date: [Add Date]</p>
             <ul>
-                <li>Developed effective multitasking skills to handle multiple tasks simultaneously.</li>
-                <li>Worked collaboratively with team members to ensure a cohesive and positive project environment.</li>
-                <li>Adapted to unexpected challenges with a proactive approach.</li>
+                <li>Developed effective multitasking skills to handle multiple orders simultaneously during peak hours.</li>
+                <li>Provided exceptional customer service by greeting and assisting customers in a friendly and professional manner.</li>
+                <li>Worked collaboratively with team members to ensure a cohesive and positive work environment.</li>
+                <li>Adapted to unexpected challenges, such as ingredient shortages or equipment malfunctions, with a proactive approach.</li>
+            </ul>
+
+            <h3>Legal Assistant</h3>
+            <p>Location: [Add Location]</p>
+            <p>Date: [Add Date]</p>
+            <ul>
+                <li>Prepared and organized legal documents and exhibits for use in court.</li>
+                <li>Collaborated with attorneys and legal staff to ensure seamless workflow and effective case management.</li>
+                <li>Adhered to strict confidentiality requirements, handling sensitive information with the utmost discretion.</li>
+                <li>Seized opportunities to learn from experienced attorneys and seek guidance on career development in intellectual technology and intellectual property law fields.</li>
+            </ul>
+
+            <h3>Ride Operator</h3>
+            <p>Location: [Add Location]</p>
+            <p>Date: [Add Date]</p>
+            <ul>
+                <li>Operated and monitored ride equipment, ensuring the safety and enjoyment of all patrons.</li>
+                <li>Conducted safety checks and routine maintenance to guarantee the proper functioning of rides.</li>
+                <li>Assisted patrons with ticket purchases, verifying tickets, and facilitating entry to rides.</li>
+                <li>Managed crowd control and line organization, enhancing the overall customer experience.</li>
+                <li>Responded to customer inquiries and resolved any issues or complaints in a professional manner.</li>
             </ul>
         </section>
     </div>
