--- a/education.html
+++ b/education.html
@@ -24,11 +24,11 @@
         <section id="education">
             <h2>EDUCATION</h2>
             <p>University of California, San Diego</p>
-            <p>B.S. in Mathematics - Computer Science</p>
+            <p>B.S. in Mathematics - Computer Science & B.S. in Cognitive Science w/ Spec. in Machine Learning and Neural Computation</p>
             <p>La Jolla, California</p>
             <p>Expected Graduation, June 2027</p>
-            <p>Concentrations: Software Engineer/Machine Learning Engineer</p>
-            <p>GPA: 3.7/4.0</p>
+            <p>Concentrations: Machine Learning Engineer/Video Game Developer</p>
+            <p>GPA: 3.4/4.0</p>
             <p>Related Coursework: Basic Data Structures & Object-Oriented Design, System Programs and Software Tools</p>
             <p>Expected Related Coursework: Theory of Computation, Advanced Data Structures, Software Engineering</p>
         </section>
