--- a/projects.html
+++ b/projects.html
@@ -23,27 +23,29 @@
     <div class="content">
         <section id="projects">
             <h2>PROJECTS</h2>
-            <h3>Simple Image Editing Program</h3>
-            <p>Solo Project</p>
-            <p>La Jolla, California</p>
-            <p>Nov 2023</p>
+            
+            <h3>D.K. Night Club | Video Game Development Club Project</h3>
+            <p>October 2024</p>
             <ul>
-                <li>Developed Python image processing program using PIL.</li>
-                <li>Implemented negative filter, edge detection, blending, and collage creation for multiple images.</li>
-                <li>Emphasized scalability and efficient problem-solving.</li>
+                <li>Designed intuitive UI components, including timer, ID pop-up, and decision buttons to streamline game flow.</li>
+                <li>Implemented zombie detection logic and penalties for incorrect checks to enhance game difficulty.</li>
+                <li>Collaborated with artists to randomize character features and increase visual variety.</li>
+                <li>Debugged and optimized game scripts to ensure smooth gameplay and performance.</li>
             </ul>
 
-            <h3>Soccer Analytics Suite</h3>
-            <p>Solo Work</p>
-            <p>La Jolla, California</p>
-            <p>Oct 2023</p>
+            <h3>Olympic Medal Predictor | Solo Developer</h3>
+            <p>October 2024</p>
             <ul>
-                <li>Python program analyzing soccer match data, providing key statistics such as total goals, average goals per season/league, and peak scoring times.</li>
-                <li>Engineered functions to calculate key statistics, including total goals per season, average goals per season, average goals per league, and time with the most goals.</li>
-                <li>Demonstrated proficiency in file handling by reading a CSV file, extracting data, and organizing it into a usable format.</li>
-                <li>Applied strong programming skills in Python to manipulate and analyze data efficiently.</li>
-                <li>Employed dictionaries to efficiently store and manage data related to season, league, and time-based goal statistics.</li>
-                <li>Maintained well-organized and commented code for easy readability and future reference.</li>
+                <li>Designed a Python-based, data-driven model using pandas to predict Olympic medal counts based on team statistics.</li>
+                <li>Analyzed feature correlations, including team size, average age, and previous medal counts, to identify key predictors.</li>
+                <li>Cleaned and processed historical Olympic data for analysis and model training.</li>
+                <li>Developed predictive analytics to forecast medal outcomes for future Olympic events.</li>
+            </ul>
+
+            <h3>Resume Website | Solo Developer</h3>
+            <p>October 2024</p>
+            <ul>
+                <li>Designed an HTML, CSS, and JavaScript-based website to showcase professional experience, skills, and projects.</li>
             </ul>
         </section>
     </div>
