--- a/experience.html
+++ b/experience.html
@@ -22,37 +22,26 @@
 
     <div class="content">
         <section id="experience">
-            <h2>EXPERIENCE</h2>
+            <h2>RELEVANT EXPERIENCE</h2>
 
-            <h3>Retail Associate</h3>
-            <p>Location: [Add Location]</p>
-            <p>Date: [Add Date]</p>
+            <h3>Student</h3>
+            <p>Location: La Jolla, CA</p>
+            <p>Date: October 2024 - December 2024</p>
             <ul>
-                <li>Developed effective multitasking skills to handle multiple orders simultaneously during peak hours.</li>
-                <li>Provided exceptional customer service by greeting and assisting customers in a friendly and professional manner.</li>
-                <li>Worked collaboratively with team members to ensure a cohesive and positive work environment.</li>
-                <li>Adapted to unexpected challenges, such as ingredient shortages or equipment malfunctions, with a proactive approach.</li>
+                <li>Developed strong experience with the MERN stack (MongoDB, Express.js, React.js, Node.js).</li>
+                <li>Gained experience building user interfaces, server-side programming, and deploying web applications.</li>
+                <li>Dedicated time to a quarter-long, full-stack web development bootcamp designed to help beginners and experienced developers alike build a web application.</li>
+
             </ul>
 
-            <h3>Legal Assistant</h3>
-            <p>Location: [Add Location]</p>
-            <p>Date: [Add Date]</p>
+            <h3>Summer Intern</h3>
+            <p>Location: Newport Beach, CA</p>
+            <p>Date: June 2022 - Auguest 2022</p>
             <ul>
                 <li>Prepared and organized legal documents and exhibits for use in court.</li>
                 <li>Collaborated with attorneys and legal staff to ensure seamless workflow and effective case management.</li>
                 <li>Adhered to strict confidentiality requirements, handling sensitive information with the utmost discretion.</li>
                 <li>Seized opportunities to learn from experienced attorneys and seek guidance on career development in intellectual technology and intellectual property law fields.</li>
-            </ul>
-
-            <h3>Ride Operator</h3>
-            <p>Location: [Add Location]</p>
-            <p>Date: [Add Date]</p>
-            <ul>
-                <li>Operated and monitored ride equipment, ensuring the safety and enjoyment of all patrons.</li>
-                <li>Conducted safety checks and routine maintenance to guarantee the proper functioning of rides.</li>
-                <li>Assisted patrons with ticket purchases, verifying tickets, and facilitating entry to rides.</li>
-                <li>Managed crowd control and line organization, enhancing the overall customer experience.</li>
-                <li>Responded to customer inquiries and resolved any issues or complaints in a professional manner.</li>
             </ul>
         </section>
     </div>
